# IronMC

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/network/: connection.rs  mod.rs
