[package]
name = "iron_mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }

# Tracing & telemetry stuff
tracing = "0.1.37"
tracing-subscriber = "0.3"
opentelemetry = { version = "0.18", features = ["trace", "rt-tokio-current-thread"] }
tracing-opentelemetry = "0.18.0"
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio-current-thread"] }
actix-web-opentelemetry = "0.13.0"
uuid = "1.3.3"
